--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
               <p>Це правило встановлює спосіб позиціювання елементу відносно вікна браузера чи інших об'єктів на веб-сторінці. Положення елементу задається атрибутами left, top, right і bottom відносно краю вікна браузера.</p>
               <p>Приклад блоку в якому використовується значення absolute i relative властивості position:</p>
               <div id="puzzle">
-                    <img id="img1" src="img/v7/puzzle/1.png" alt>
-                    <img id="img2" src="img/v7/puzzle/2.png" alt>
-                    <img id="img3" src="img/v7/puzzle/3.png" alt>
-                    <img id="img4" src="img/v7/puzzle/4.png" alt>
-                    <img id="img5" src="img/v7/puzzle/5.png" alt>
-                    <img id="img6" src="img/v7/puzzle/6.png" alt>
-                    <img id="img7" src="img/v7/puzzle/7.png" alt>
-                    <img id="img8" src="img/v7/puzzle/8.png" alt>
-                    <img id="img9" src="img/v7/puzzle/9.png" alt>
-                    <img id="img10" src="img/v7/puzzle/10.png" alt>
-                    <img id="img11" src="img/v7/puzzle/11.png" alt>
-                    <img id="img12" src="img/v7/puzzle/12.png" alt>
-                    <img id="img13" src="img/v7/puzzle/13.png" alt>
-                    <img id="img14" src="img/v7/puzzle/14.png" alt>
-                    <img id="img15" src="img/v7/puzzle/15.png" alt>
-                    <img id="img16" src="img/v7/puzzle/16.png" alt>
-                    <img id="img17" src="img/v7/puzzle/17.png" alt>
-                    <img id="img18" src="img/v7/puzzle/18.png" alt>
-                    <img id="img19" src="img/v7/puzzle/19.png" alt>
-                    <img id="img20" src="img/v7/puzzle/20.png" alt>
+                    <img id="img1" src="img/v7/puzzle/1.png" alt="puzzle1">
+                    <img id="img2" src="img/v7/puzzle/2.png" alt="puzzle2">
+                    <img id="img3" src="img/v7/puzzle/3.png" alt="puzzle3">
+                    <img id="img4" src="img/v7/puzzle/4.png" alt="puzzle4">
+                    <img id="img5" src="img/v7/puzzle/5.png" alt="puzzle5">
+                    <img id="img6" src="img/v7/puzzle/6.png" alt="puzzle6">
+                    <img id="img7" src="img/v7/puzzle/7.png" alt="puzzle7">
+                    <img id="img8" src="img/v7/puzzle/8.png" alt="puzzle8">
+                    <img id="img9" src="img/v7/puzzle/9.png" alt="puzzle9">
+                    <img id="img10" src="img/v7/puzzle/10.png" alt="puzzle10">
+                    <img id="img11" src="img/v7/puzzle/11.png" alt="puzzle11">
+                    <img id="img12" src="img/v7/puzzle/12.png" alt="puzzle12">
+                    <img id="img13" src="img/v7/puzzle/13.png" alt="puzzle13">
+                    <img id="img14" src="img/v7/puzzle/14.png" alt="puzzle14">
+                    <img id="img15" src="img/v7/puzzle/15.png" alt="puzzle15">
+                    <img id="img16" src="img/v7/puzzle/16.png" alt="puzzle16">
+                    <img id="img17" src="img/v7/puzzle/17.png" alt="puzzle17">
+                    <img id="img18" src="img/v7/puzzle/18.png" alt="puzzle18">
+                    <img id="img19" src="img/v7/puzzle/19.png" alt="puzzle19">
+                    <img id="img20" src="img/v7/puzzle/20.png" alt="puzzle20">
                     
               </div>
                     
